fix: overflow issue

--- a/src/components/organism/Testimonials/Testimonials.css
+++ b/src/components/organism/Testimonials/Testimonials.css
@@ -37,13 +37,13 @@ padding: 0 80px;
 
 .slick-prev {
     left: 12%;
-    top: 456px;
+    top: 554px;
     z-index: 1;
 }
 
 .slick-next {
     right: 12%;
-    top: 456px;
+    top: 554px;
     z-index: 1;
 }
 
@@ -57,6 +57,7 @@ padding: 0 80px;
 .slick-dots {
     position: relative;
     top: 60px;
+    padding-bottom: 100px;
 }
 
 .slick-dots li button:before {
@@ -74,3 +75,5 @@ padding: 0 80px;
     color: #535353;
     border: 8px #535353 solid;
 }
+
+.slick-initialized { overflow: hidden; }
